src/objects/Guarantor_Details__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Guaranteed__c</fullName>
        <label>Amount Guaranteed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Guarantor Client ID</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Guarantor Details</relationshipLabel>
        <relationshipName>Guarantor_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guarantee_Date__c</fullName>
        <label>Guarantee Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Account_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Loan Account ID</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Guarantor Details</relationshipLabel>
        <relationshipName>Guarantor_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Guarantor Details</label>
    <nameField>
        <displayFormat>GID-{00000}</displayFormat>
        <label>Guarantor&apos;s ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guarantor Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>